Fixed header + landing page
Fixed an issue where the header would cause a gap on the right side on some resolutions

Fixed gap on the sides of landing page carousel

Fixed horizontal scrolling issue on landing page

--- a/style-Andrei.css
+++ b/style-Andrei.css
@@ -1,6 +1,6 @@
-.my-class-with-padding {
+/*.my-class-with-padding {
     padding-left: 58px;
-}
+}*/
 
 .navbar-brand {
     display: block;
@@ -37,7 +37,7 @@ a:hover {
 }
 
 .nav-link {
-    margin-left: 50px;
+    margin-left: 14px;
 }
 
 .cart {
